Package: listenv
================

Version: 0.8.0-9000 [2021-02-14]

NEW FEATURES:

 * Add aperm() and t() for list-environment arrays.

 * parse_env_subset() gained argument 'is_variable' to control whether or not
   the inferred element named should be checked if it is a valid variable name
   or not.
 
DEPRECATED AND DEFUNCT:

 * Dropped the defunct usage of listenv(length = n), meaning it no longer gives
   an error but instead produces a listenv with an element named 'length'.
 

Version: 0.8.0 [2019-12-05]

SIGNFICANT CHANGES:

 * S3 method lengths.listenv() is no longer exported.

NEW FEATURES:

 * Made several error messages more informative.  The downside is that those
   messages are no longer translated (because they are no longer aligned with
   built-in R error messages which have translations)
 
BUG FIXES:

 * parse_env_subset(x[1, names]) on a listenv 'x' matrix would throw error
   'Error in if (any(i < 0)) { : missing value where TRUE/FALSE needed' if
   one of the elements in 'names' specifies a non-existing column name.
   
 * parse_env_subset(x[]) on a listenv 'x' would throw an error on
   "Invalid subset: 'x[]'".

 * parse_env_subset(x[names]) on a listenv 'x' would throw an error on
   'length(x) = 2 > 1' in coercion to 'logical(1)' when length(names) > 1
    and _R_CHECK_LENGTH_1_LOGIC2_=true.

 * parse_env_subset(x[1,idxs]) on a listenv 'x' would throw an error on
   'length(x) = 2 > 1' in coercion to 'logical(1)' with length(idxs) > 1
   and _R_CHECK_LENGTH_1_LOGIC2_=true.

 * parse_env_subset(x[[names]]) on a regular environment 'x' with
   length(names) > 1 would not throw an error, whereas x[[names]] would.

 * parse_env_subset(x[[1]]) on a regular environment 'x' would not throw
   an error, whereas x[[1]] would.


Version: 0.7.0 [2018-01-21]

NEW FEATURES:

 * Now it is possible to set the dimension on an empty list environment without
   first resizing it with length(), e.g. x <- listenv(); dim(x) <- c(2, 3).
